gccida/g0/branch_prob
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1007:1: error: use of undeclared identifier 'edge_info_0'
edge_info_0 *inf; // [rsp+18h] [rbp-88h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1007:14: error: use of undeclared identifier 'inf'; did you mean 'if'?
edge_info_0 *inf; // [rsp+18h] [rbp-88h] 
             ^~~
             if
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1007:14: error: expected expression
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1009:1: error: use of undeclared identifier 'edge_info_0'
edge_info_0 *i_1; // [rsp+28h] [rbp-78h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1009:14: error: use of undeclared identifier 'i_1'; did you mean 'e_1'?
edge_info_0 *i_1; // [rsp+28h] [rbp-78h] 
             ^~~
             e_1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1008:6: note: 'e_1' declared here
edge e_1; // [rsp+20h] [rbp-80h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1120:1: error: use of undeclared identifier 'ignore_next_note_1'
ignore_next_note_1 = 1; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1124:6: error: use of undeclared identifier 'ignore_next_note_1'
if ( ignore_next_note_1 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1126:1: error: use of undeclared identifier 'ignore_next_note_1'
ignore_next_note_1 = 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1150:1: error: use of undeclared identifier 'inf'
inf = ( edge_info_0 *)e_1->aux; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1150:22: error: expected expression
inf = ( edge_info_0 *)e_1->aux; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1150:9: error: use of undeclared identifier 'edge_info_0'
inf = ( edge_info_0 *)e_1->aux; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1151:48: error: use of undeclared identifier 'inf'; did you mean 'int'?
if ( ( e_1->flags & 0x10) != 0 && ( *( _BYTE *)inf & 4) == 0 && ( *( _BYTE *)inf & 2) == 0 ) 
                                               ^~~
                                               int
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1151:48: error: expected expression
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1151:78: error: use of undeclared identifier 'inf'; did you mean 'int'?
if ( ( e_1->flags & 0x10) != 0 && ( *( _BYTE *)inf & 4) == 0 && ( *( _BYTE *)inf & 2) == 0 ) 
                                                                             ^~~
                                                                             int
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1151:78: error: expected expression
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1153:12: error: use of undeclared identifier 'inf'; did you mean 'int'?
*( _BYTE *)inf |= 4u; 
           ^~~
           int
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1153:12: error: expected expression
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1193:22: error: expected expression
i_1 = ( edge_info_0 *)e_2a->aux; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/profile.c:1193:9: error: use of undeclared identifier 'edge_info_0'
i_1 = ( edge_info_0 *)e_2a->aux; 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/branch_prob/src/obj/profile.o] Error 1
